--- a/exarea/Info.plist
+++ b/exarea/Info.plist
@@ -24,6 +24,13 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>IRANSans.ttf</string>
+		<string>IRANSans_Bold.ttf</string>
+		<string>Segoe UI Bold.ttf</string>
+		<string>Segoe UI.ttf</string>
+	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
